<resources>
    <string name="app_name">Kitap Mobile</string>
    <string name="title_home">Главная</string>
    <string name="title_addition">Добавление</string>
    <string name="title_library">Библиотека</string>
    <string name="title_search">Поиск</string>
    <string name="title_accounts">Мой кабинет</string>
    <string name="trans">trans</string>

    <string name="ion_search"></string>
</resources>