<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:background="@color/Irek"/>
    <item
        android:id="@+id/navigation_addition"
        android:icon="@drawable/ic_add"
        android:title="@string/title_addition"
        android:background="@color/Irek" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library"
        android:title="@string/title_library"
        android:background="@color/Irek"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        android:background="@color/Irek"/>
    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_account"
        android:title="@string/title_accounts"
        android:background="@color/Irek"/>
</menu>