<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.irekonelove4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_addition"
        android:name="com.example.irekonelove4.ui.addition.AdditionFragment"
        android:label="@string/title_addition"
        tools:layout="@layout/fragment_addition" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.irekonelove4.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.irekonelove4.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.example.irekonelove4.ui.accounts.AccountFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts"
        />
</navigation>